# meshroom

./: .dockerignore  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  babel.config.js  dev.sh  index.html  mkdocs.yml  package.json  pyproject.toml  search.html  vue.config.js
.github/workflows/: docs.yml  main.yml  publish.yml  pytest.yml  release.yml  tag.yml
commands/add/: index.html
commands/configure/: index.html
commands/create_integration/: index.html
commands/create_product/: index.html
commands/down/: index.html
commands/execute/: index.html
commands/init/: index.html
commands/plug/: index.html
commands/produce/: index.html
commands/publish/: index.html
commands/pull/: index.html
commands/remove/: index.html
commands/trigger/: index.html
commands/unplug/: index.html
commands/up/: index.html
commands/watch/: index.html
concepts/: index.html
concepts/introduction/: index.html
create_product/: index.html
docs/: concepts.md  index.md  tutorial.md
docs/commands/: create_product.md  plug.md
meshroom/: ast.py  decorators.py  generators.py  git.py  interaction.py  model.py  secrets.py  template.py  utils.py
public/: index.html
search/: search_index.json
site/: index.html  search.html
src/: App.jsx  icons.jsx  main.js  style.scss  utils.jsx  websocket.jsx
tests/: __init__.py  conftest.py  test_capabilities.py  test_decorators.py  test_integrations.py  test_meshrrom_init.py  test_plug.py  test_product.py  test_secrets.py  test_setup_functions.py  test_up.py
tutorial/: index.html
(+115 files in other folders)
