[tool.poetry]
name = "meshroom"
version = "0.1.0"
description = ""
authors = ["Jerome Fellus <jerome.fellus@sekoia.fr>"]
packages = [{include = "meshroom"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.1"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
websockets = "^13.0.1"
tomli = "^2.2.1"
click = "^8.1.7"
pydantic = "^2.10.3"
pyyaml = "^6.0.2"
tabulate = "^0.9.0"
gitpython = "^3.1.43"
keyring = "^25.5.0"
passpy = "^1.0.2"


[tool.poetry.scripts]
meshroom = "meshroom.cli.cli:meshroom"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 190

[tool.pytest.ini_options]
testpaths = ["./tests"]